--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -2,7 +2,8 @@ services:
   - type: web
     name: glyphmind-backend
     env: python
-    buildCommand: pip install -r requirements.txt
+    runtime: python-3.11.9
+    buildCommand: pip install --upgrade pip && pip install -r requirements-minimal.txt
     startCommand: python render_start.py
     plan: free
     envVars:
@@ -12,6 +13,8 @@ services:
         value: /opt/render/project/src/data
       - key: LOG_LEVEL
         value: info
+      - key: PYTHON_VERSION
+        value: 3.11.9
       # Add your API keys as environment variables in Render dashboard:
       # - GOOGLE_SEARCH_API_KEY
       # - GOOGLE_SEARCH_ENGINE_ID  
